5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1674_1100.log
== TEST (2019-04-23 18:12:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
if x == 2:
	x = "Tartaruga"
elif x == 5:
	x = "Garça"
elif x == 10:
	x = "Arara"
elif x == 20:
	x = "Mico-leão-dourado"
elif x == 50:
	x = "Onça-pintada"
elif x ==100:
	x = "Garoupa"
print("Entrada:", x)
print("Animal:", y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print("Animal:", y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:13:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
if x == 2:
	y = "Tartaruga"
elif x == 5:
	y = "Garça"
elif x == 10:
	y = "Arara"
elif x == 20:
	y = "Mico-leão-dourado"
elif x == 50:
	y = "Onça-pintada"
elif x ==100:
	y = "Garoupa"
print("Entrada:", x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:15:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
if x == 2:
	y = "Tartaruga"
	if x == 5:
		y = "Garça"
	elif x == 10:
		y = "Arara"
	elif x == 20:
		y = "Mico-leão-dourado"
	elif x == 50:
		y = "Onça-pintada"
	elif x ==100:
		y = "Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:16:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
if x == 2:
	y = "Tartaruga"
elif x == 5:
	y = "Garça"
elif x == 10:
	y = "Arara"
elif x == 20:
	y = "Mico-leão-dourado"
elif x == 50:
	y = "Onça-pintada"
elif x ==100:
	y = "Garoupa"
else:
	y = "Invalido"
print("Entrada:", x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:18:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
y = "Invalido"
if x == 2:
	y = "Tartaruga"
if x == 5:
	y = "Garça"
if x == 10:
	y = "Arara"
if x == 20:
	y = "Mico-leão-dourado"
if x == 50:
	y = "Onça-pintada"
if x ==100:
	y = "Garoupa"
print("Entrada:", x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:18:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
y = "Invalido"
if x == 2:
	y = "Tartaruga"
if x == 5:
	y = "Garça"
if x == 10:
	y = "Arara"
if x == 20:
	y = "Mico-leao-dourado"
if x == 50:
	y = "Onça-pintada"
if x ==100:
	y = "Garoupa"
print("Entrada:", x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:18:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
y = "Invalido"
if x == 2:
	y = "Tartaruga"
if x == 5:
	y = "Garça"
if x == 10:
	y = "Arara"
if x == 20:
	y = "Mico-leao-dourado"
if x == 50:
	y = "Onça-pintada"
if x ==100:
	y = "Garoupa"
print("Entrada:", x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:18:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
y = "Invalido"
if x == 2:
	y = "Tartaruga"
if x == 5:
	y = "Garca"
if x == 10:
	y = "Arara"
if x == 20:
	y = "Mico-leao-dourado"
if x == 50:
	y = "Onça-pintada"
if x ==100:
	y = "Garoupa"
print("Entrada:", x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:18:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
y = "Invalido"
if x == 2:
	y = "Tartaruga"
if x == 5:
	y = "Garca"
if x == 10:
	y = "Arara"
if x == 20:
	y = "Mico-leao-dourado"
if x == 50:
	y = "Onça-pintada"
if x ==100:
	y = "Garoupa"
print("Entrada:", x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 18:18:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
y = "Invalido"
if x == 2:
	y = "Tartaruga"
if x == 5:
	y = "Garca"
if x == 10:
	y = "Arara"
if x == 20:
	y = "Mico-leao-dourado"
if x == 50:
	y = "Onça-pintada"
if x ==100:
	y = "Garoupa"
print("Entrada:", x)
print("Animal:", y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:18:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
y = "Invalido"
if x == 2:
	y = "Tartaruga"
if x == 5:
	y = "Garca"
if x == 10:
	y = "Arara"
if x == 20:
	y = "Mico-leao-dourado"
if x == 50:
	y = "Onça-pintada"
if x ==100:
	y = "Garoupa"
print("Entrada:", x)
print("Animal:", y)
-- EXECUTION TIME:
0.149618
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 18:19:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("nota: "))
y = "Invalido"
if x == 2:
	y = "Tartaruga"
if x == 5:
	y = "Garca"
if x == 10:
	y = "Arara"
if x == 20:
	y = "Mico-leao-dourado"
if x == 50:
	y = "Onca-pintada"
if x ==100:
	y = "Garoupa"
print("Entrada:", x)
print("Animal:", y)
-- EXECUTION TIME:
0.184455
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
